no more private key

--- a/root/defaults/rsnapshot.conf
+++ b/root/defaults/rsnapshot.conf
@@ -10,7 +10,7 @@ rsync_short_args	-a
 
 rsync_long_args		--delete --numeric-ids --relative --delete-excluded --no-perms --no-owner --no-group
 
-ssh_args			-i /config/keys/id_rsa
+ssh_args			-i /root/.ssh/id_rsa
 
 retain				hourly		6
 retain				daily		7
